@@ -30,6 +30,7 @@ Stu Tomlinson <stu@nosnilmot.com>
 
 Accepted Patches
 ================
+Elliott Sales de Andrade
 Chris Banal
 Daniel Beardsmore
 Joshua Cowan
